--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -84,7 +84,7 @@
 
         <div class="header mm-fixed-top {% unless template contains "index" %}header_bar{% endunless %}">
 
-          {% include 'banner-promo' %}
+          {% include 'snippet-banner--promo' %}
 
           <div class="container">
 
