--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -182,6 +182,14 @@
 
 {% endif %}
 
+
+
+{% include 'snippet-homepage--helping_hand' %}
+
+
+{% include 'snippet-homepage--testimonials' %}
+
+
 <!-- Hero Photo Split -->
 <div class="container content herodiv" style="padding-top: 5px; margin-top: 5px;">
 <div class="herodiv-eight eight columns alpha">
