--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -9,6 +9,25 @@
 
 
 /**
+ * Font Families
+ */
+@font-face {
+    font-family: 'blackjack';
+    src: url('/assets/fonts/blackjack-webfont.eot');
+    src: url('/assets/fonts/blackjack-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/assets/fonts/blackjack-webfont.woff2') format('woff2'),
+         url('/assets/fonts/blackjack-webfont.woff') format('woff'),
+         url('/assets/fonts/blackjack-webfont.ttf') format('truetype'),
+         url('/assets/fonts/blackjack-webfont.svg#black_jackregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+/**
  * promo banners!
  */
 .promo-banner {
