--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -182,10 +182,9 @@
 
 {% endif %}
 
-
+{% include 'snippet-svg_definitions' %}
 
 {% include 'snippet-homepage--helping_hand' %}
-
 
 {% include 'snippet-homepage--testimonials' %}
 
