--- a/snippets/snippet-homepage--helping_hand.liquid
+++ b/snippets/snippet-homepage--helping_hand.liquid
@@ -1,8 +1,10 @@
 <div class="container content section-homepage--helping_hand">
-  <picture class="section-image eight columns alpha">
+  <div class="eight columns alpha">
+    <picture class="section-image">
       <source srcset="//placehold.it/520x214">
       <img src="//placehold.it/520x214" alt="Hero Image">
     </picture>
+  </div>
   <div class="content-container seven omega columns offset-by-one">
     <h1 class="section-title--hed">A Helping <span>Hand</span></h1>
     <p class="section-title--dek">Every Little Lotus purchase helps provide Embrace incubators to babies in need, giving them a better chance at life.</p>
