THINGS DIDNT GET ADDED WAHHHHH

--- a/assets/styles.css.liquid
+++ b/assets/styles.css.liquid
@@ -3153,14 +3153,14 @@ html.mm-opened.mm-white .mm-page {
   color: rgba(0, 0, 0, 0.6); }
 
 .mm-menu.mm-white .mm-list > li:after {
-  border-color: rgba(0, 0, 0, 0.1); }
+  border-color: #dcdcdd; }
 .mm-menu.mm-white .mm-list > li > a.mm-subclose {
   background: rgba(0, 0, 0, 0.06);
   color: rgba(0, 0, 0, 0.3); }
 .mm-menu.mm-white .mm-list > li > a.mm-subopen:after, .mm-menu.mm-white .mm-list > li > a.mm-subclose:before {
-  border-color: rgba(0, 0, 0, 0.3); }
+  border-color: #8a8c8f; }
 .mm-menu.mm-white .mm-list > li > a.mm-subopen:before {
-  border-color: rgba(0, 0, 0, 0.1); }
+  border-color: #dcdcdd; }
 .mm-menu.mm-white .mm-list > li.mm-selected > a:not(.mm-subopen),
 .mm-menu.mm-white .mm-list > li.mm-selected > span {
   background: rgba(0, 0, 0, 0.06); }
