--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -510,7 +510,7 @@ $(document).ready(function(){
   <div class="container content" style="padding-top:0">
     <div class="sixteen columns">
       <a href="/pages/press">
-        {{ 'logos.png' | asset_url | img_tag }}
+        {{ 'logos-blue.png' | asset_url | img_tag }}
       </a>
  	</div>
   </div>
