--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -190,6 +190,14 @@
 
 {% include 'snippet-homepage--products' %}
 
+<div class="section-homepage--module_two_column">
+  <div class="container content">
+    {% include 'snippet-homepage--our_story' %}
+    {% include 'snippet-homepage--shop_now' %}
+  </div>
+</div>
+
+
 {% comment %}
 <!-- Hero Photo Split -->
 <div class="container content herodiv" style="padding-top: 5px; margin-top: 5px;">
