--- a/snippets/snippet-homepage--testimonials.liquid
+++ b/snippets/snippet-homepage--testimonials.liquid
@@ -17,8 +17,11 @@
       <svg viewBox="0 0 98.84 94" class="icon-svg--star">
         <use xlink:href="#icon-svg--star"></use>
       </svg>
-      <p class="section-title--dek"><strong>4.9</strong> stars out of <strong>5</strong> for 100 reviews</p>
+      <svg viewBox="0 0 98.84 94" class="icon-svg--star icon-svg--star_inverted">
+        <use xlink:href="#icon-svg--star_inverted"></use>
+      </svg>
     </div>
+    <p class="section-title--dek"><strong>4.9</strong> stars out of <strong>5</strong> for 100 reviews</p>
     <div class="testimonials-container">
       <figure class="alpha one-third column testimonial">
         <blockquote class="testimonial-quote">
